v11/docs/ModelsInvalidKeystore.md
# ModelsInvalidKeystore

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**KeystoreId** | Pointer to **string** |  | [optional] 
**ClientMachine** | Pointer to **NullableString** |  | [optional] 
**StorePath** | Pointer to **NullableString** |  | [optional] 
**Alias** | Pointer to **NullableString** |  | [optional] 
**Reason** | Pointer to **int32** |  | [optional] 
**Explanation** | Pointer to **NullableString** |  | [optional] 

## Methods

### NewModelsInvalidKeystore

`func NewModelsInvalidKeystore() *ModelsInvalidKeystore`

NewModelsInvalidKeystore instantiates a new ModelsInvalidKeystore object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsInvalidKeystoreWithDefaults

`func NewModelsInvalidKeystoreWithDefaults() *ModelsInvalidKeystore`

NewModelsInvalidKeystoreWithDefaults instantiates a new ModelsInvalidKeystore object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetKeystoreId

`func (o *ModelsInvalidKeystore) GetKeystoreId() string`

GetKeystoreId returns the KeystoreId field if non-nil, zero value otherwise.

### GetKeystoreIdOk

`func (o *ModelsInvalidKeystore) GetKeystoreIdOk() (*string, bool)`

GetKeystoreIdOk returns a tuple with the KeystoreId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetKeystoreId

`func (o *ModelsInvalidKeystore) SetKeystoreId(v string)`

SetKeystoreId sets KeystoreId field to given value.

### HasKeystoreId

`func (o *ModelsInvalidKeystore) HasKeystoreId() bool`

HasKeystoreId returns a boolean if a field has been set.

### GetClientMachine

`func (o *ModelsInvalidKeystore) GetClientMachine() string`

GetClientMachine returns the ClientMachine field if non-nil, zero value otherwise.

### GetClientMachineOk

`func (o *ModelsInvalidKeystore) GetClientMachineOk() (*string, bool)`

GetClientMachineOk returns a tuple with the ClientMachine field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetClientMachine

`func (o *ModelsInvalidKeystore) SetClientMachine(v string)`

SetClientMachine sets ClientMachine field to given value.

### HasClientMachine

`func (o *ModelsInvalidKeystore) HasClientMachine() bool`

HasClientMachine returns a boolean if a field has been set.

### SetClientMachineNil

`func (o *ModelsInvalidKeystore) SetClientMachineNil(b bool)`

 SetClientMachineNil sets the value for ClientMachine to be an explicit nil

### UnsetClientMachine
`func (o *ModelsInvalidKeystore) UnsetClientMachine()`

UnsetClientMachine ensures that no value is present for ClientMachine, not even an explicit nil
### GetStorePath

`func (o *ModelsInvalidKeystore) GetStorePath() string`

GetStorePath returns the StorePath field if non-nil, zero value otherwise.

### GetStorePathOk

`func (o *ModelsInvalidKeystore) GetStorePathOk() (*string, bool)`

GetStorePathOk returns a tuple with the StorePath field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetStorePath

`func (o *ModelsInvalidKeystore) SetStorePath(v string)`

SetStorePath sets StorePath field to given value.

### HasStorePath

`func (o *ModelsInvalidKeystore) HasStorePath() bool`

HasStorePath returns a boolean if a field has been set.

### SetStorePathNil

`func (o *ModelsInvalidKeystore) SetStorePathNil(b bool)`

 SetStorePathNil sets the value for StorePath to be an explicit nil

### UnsetStorePath
`func (o *ModelsInvalidKeystore) UnsetStorePath()`

UnsetStorePath ensures that no value is present for StorePath, not even an explicit nil
### GetAlias

`func (o *ModelsInvalidKeystore) GetAlias() string`

GetAlias returns the Alias field if non-nil, zero value otherwise.

### GetAliasOk

`func (o *ModelsInvalidKeystore) GetAliasOk() (*string, bool)`

GetAliasOk returns a tuple with the Alias field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetAlias

`func (o *ModelsInvalidKeystore) SetAlias(v string)`

SetAlias sets Alias field to given value.

### HasAlias

`func (o *ModelsInvalidKeystore) HasAlias() bool`

HasAlias returns a boolean if a field has been set.

### SetAliasNil

`func (o *ModelsInvalidKeystore) SetAliasNil(b bool)`

 SetAliasNil sets the value for Alias to be an explicit nil

### UnsetAlias
`func (o *ModelsInvalidKeystore) UnsetAlias()`

UnsetAlias ensures that no value is present for Alias, not even an explicit nil
### GetReason

`func (o *ModelsInvalidKeystore) GetReason() int32`

GetReason returns the Reason field if non-nil, zero value otherwise.

### GetReasonOk

`func (o *ModelsInvalidKeystore) GetReasonOk() (*int32, bool)`

GetReasonOk returns a tuple with the Reason field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetReason

`func (o *ModelsInvalidKeystore) SetReason(v int32)`

SetReason sets Reason field to given value.

### HasReason

`func (o *ModelsInvalidKeystore) HasReason() bool`

HasReason returns a boolean if a field has been set.

### GetExplanation

`func (o *ModelsInvalidKeystore) GetExplanation() string`

GetExplanation returns the Explanation field if non-nil, zero value otherwise.

### GetExplanationOk

`func (o *ModelsInvalidKeystore) GetExplanationOk() (*string, bool)`

GetExplanationOk returns a tuple with the Explanation field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetExplanation

`func (o *ModelsInvalidKeystore) SetExplanation(v string)`

SetExplanation sets Explanation field to given value.

### HasExplanation

`func (o *ModelsInvalidKeystore) HasExplanation() bool`

HasExplanation returns a boolean if a field has been set.

### SetExplanationNil

`func (o *ModelsInvalidKeystore) SetExplanationNil(b bool)`

 SetExplanationNil sets the value for Explanation to be an explicit nil

### UnsetExplanation
`func (o *ModelsInvalidKeystore) UnsetExplanation()`

UnsetExplanation ensures that no value is present for Explanation, not even an explicit nil

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


